[package]
name = "token-ring"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
mini-redis = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
statrs = { version = "0.18.0", features = ["rand"] }
tokio = { version = "1.42.0", features = ["full"] }
